# AlienTalk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODOS.md  alchemist.py  alchemist_prime.py
daemon/: Cargo.toml  entitlements.plist  tauri.conf.json
daemon/src/: bridge.rs  config.rs  context.rs  main.rs  pipeline.rs  tray.rs
daemon/src/engine/: logic.rs
daemon/ui/onboarding/: script.js  styles.css
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: bridge.rs  config.rs  lib.rs  main.rs  onboarding.rs  pipeline.rs  queue.rs  stats.rs  tray.rs
desktop/src/engine/: codeblocks.rs  dialect.rs  mod.rs  normalize.rs  stopwords.rs  structural.rs
desktop/tests/: golden_parity.rs
desktop/ui/onboarding/: index.html  script.js  styles.css
engine/: Cargo.toml  __init__.py  alchemist.py  alchemist_prime.py  generate_fixtures.py  spell.py  test_alchemist.py
engine/integrations/: mcp_server.py  pipe.sh  proxy.py  sdk_wrapper.py
engine/src/: lib.rs  safety.rs  scorer.rs
engine/src/stage1/: cleanup.rs  filler.rs  mod.rs  rewrite.rs
engine/src/stage2/: minify.rs  mod.rs  strip.rs  symbols.rs
engine/tests/: test_prime.py  test_spell.py
engine/tests/fixtures/: golden.json
extension/: background.js  content.css  content.js  diff-ui.js  diff.css  diff.js  manifest.json  native-messaging-host.json  popup.html  popup.js
extension/popup/: popup.html  popup.js
extension/src/: background.js  content.css  content.js
integrations/: pipe.sh  repl.py  sdk_wrapper.py
tests/: competitive_benchmark.py  stress_test.py  test_prime_thorough.py  test_repl.py
