[package]
name = "alientalk-daemon"
version = "0.1.0"
edition = "2024"
description = "AlienTalk OS daemon — prompt compression everywhere"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-python = { version = "0.3", features = ["pyo3"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
