[package]
name = "sharp-desktop"
version = "0.1.0"
edition = "2024"
description = "Sharp desktop service — prompt optimization everywhere"

[lib]
name = "sharp_desktop"
path = "src/lib.rs"

[[bin]]
name = "sharp-desktop"
path = "src/main.rs"

[dependencies]
sharp-engine = { path = "../engine" }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
