[package]
name = "sharp-engine"
version = "0.1.0"
edition = "2024"
description = "Sharp prompt optimization engine — sharpen + compress"

[lib]
name = "sharp_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
